5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1822_1647.log
== TEST (2019-06-13 10:35:10) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70)
	ap=ap+1
print(ap)
	
	
	
-- ERROR:
File "XXXX", line 6
    if(vet[i]>=70)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:14) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
	ap=ap+1
print(ap)
	
	
	
-- ERROR:
File "XXXX", line 7
    ap=ap+1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:19) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:35:22) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
	
	
	
-- EXECUTION TIME:
1.34934
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:23) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:07) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
j=0
for i in range(size(ap)):
	ap[i]=ap[i]+1
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:23) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
j=0
for i in range(size(ap)):
	ap[j]=ap[j]+1
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:38:41) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
j=0
for i in range(size(vet)):
	vet[j]=vet[j]+1
print(vet)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:26) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
j=0
for j in range(size(vet)):
	vet[j]=vet[j]+1
print(vet)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:00) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
for j in range(size(v)):
	v[j]=v[j]+1
print(vet)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:04) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
for j in range(size(v)):
	v[j]=v[j]+1
print(v)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:03) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(v)):
	ind=v[j]+1
print(v)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:59) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(v)):
	ind=v[j]+1
print(v)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:22) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(v)):
	ind=vet[j]+1
print(v)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:29) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(v)):
	ind=vet[j]+1
print(v)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:45:01) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
print(v)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=ind
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:48) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:48) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:48) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:48) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:48) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:52) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:47:20) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
for j in range(size(vet)):
	if(vet[j]>=70):
		ind=vet[j]+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:53) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		v[i]=a
		ind=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:13) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(v)):
	if(vet[j]>=70):
		v[i]=a
		ind=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:41) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[i]=a
		ind=ind+1
print(ind)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:16) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[i]=a
		
print(a)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:44) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[i]=a
		a=a+1
		
print(a)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:49) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[i]=a
		a=a+1
print(a)
print(a)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:14) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[i]=v
		
print(v)
print(a)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:29) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=v
		
print(v)
print(a)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:36) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=a
		
print(v)
print(a)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:53:39) 
-- CODE:
from numpy import*
vet= array(eval(input("freq de alunos: ")))
ap=0

for i in range(size(vet)):
	if(vet[i]>=70):
		ap=ap+1
print(ap)
v=zeros(ap,dtype=int)
ind=0
a=0
for j in range(size(vet)):
	if(vet[j]>=70):
		vet[j]=a
		
print(a)
print(a)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
